@@ -1,0 +1,1 @@
+cdecl @ @ @ explain void f(int (*g) const) @ 65
